Created CmdBuilder for Windows and Linux which uses JavaCommandBuilder for making driver JAVA command